# readly-mcp

./: .mcpb  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  PRD.md  README.md  SPEC_v0.2.md  browser.py  pdf_maker.py  pyproject.toml  pyrightconfig.json  requirements.txt  server.py  start.bat  start.ps1
.github/workflows/: ci.yml
docs/: architecture.md  important_locations.md  playwright_guide.md
native/: build.ps1
src/readly_mcp/: __main__.bak  __main__.py  server.py  transport.py
src/readly_mcp/core/: browser.py  pdf.py
tests/: conftest.py
tests/unit/: test_browser_quality.py  test_server.py
user_data/: Last Browser  Local State
user_data/Default/: DIPS  Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Shortcuts  Top Sites  Web Data  passkey_enclave_state
user_data/Default/Cache/Cache_Data/: data_0  data_1  data_2  f_000001  f_000002  f_000003  f_000004  f_000007  f_000009  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  f_000020  f_000021  f_000022  f_000023  f_000024  f_000025  f_000026  f_000027  f_000028  f_000029  (+358 more)
user_data/Default/Cache/No_Vary_Search/: journal.baj
user_data/Default/Code Cache/js/: 034ccae279c72b01_0  038bd80084a18e7d_0  05887918c3505ea5_0  07fefdf843fa2442_0  089cc0b13cc1b28a_0  0a936696a90e6f11_0  0bef3d2090c16152_0  0c67f5491cb52803_0  0cf1a27a9ed56a42_0  0f483c108cf6ae34_0  15cb877154b2d9ca_0  193f1af56e5109d1_0  (+133 more)
user_data/Default/DawnGraphiteCache/: data_1  index
user_data/Default/DawnWebGPUCache/: data_1  index
user_data/Default/Extension Rules/: LOG
user_data/Default/Extension Scripts/: LOG
user_data/Default/Extension State/: LOG
user_data/Default/GCM Store/: LOG
user_data/Default/GPUCache/: data_0  data_1  data_2  index
user_data/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
user_data/Default/Search Logos/: metadata
user_data/Default/Session Storage/: LOG
user_data/Default/Sessions/: Session_13411683233443230  Tabs_13411685313889961
user_data/Default/Site Characteristics Database/: LOG
user_data/Default/WebStorage/: QuotaManager
user_data/Default/shared_proto_db/: LOG
user_data/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  index
user_data/GraphiteDawnCache/: data_1  index
user_data/ShaderCache/: data_1  index
user_data/segmentation_platform/: ukm_db
web_sota/: index.html  package-lock.json  package.json  start.ps1  vite.config.ts
web_sota/src/: App.tsx
web_sota/src/common/: apps-catalog.ts
web_sota/src/pages/: apps.tsx  chat.tsx  dashboard.tsx  help.tsx  library.tsx  settings.tsx  status.tsx
(+20 files in other folders)
