[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readly-mcp"
version = "0.1.0"
description = "MCP server for scraping Readly magazines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0,<4",
    "fastapi>=0.115.0",
    "playwright>=1.40.0",
    "fpdf2>=2.7.0",
    "pillow>=10.0.0",
    "uvicorn>=0.40.0",
    "ruff>=0.15.2",
]

[project.scripts]
readly-mcp = "readly_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/readly_mcp"]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "W", "C90", "I", "N", "UP", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLO", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["ANN101", "ANN102", "D100", "D104", "S101", "G004", "PLR0913", "TRY003", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "PLR", "TRY", "S105", "S106", "SLF001", "ARG002", "PLC0415"]
"server.py" = ["T20", "ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
