[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readly-mcp"
version = "0.1.0"
description = "MCP server for scraping Readly magazines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0,<4",
    "fastapi>=0.115.0",
    "playwright>=1.40.0",
    "fpdf2>=2.7.0",
    "pillow>=10.0.0",
    "uvicorn>=0.40.0",
    "ruff>=0.15.2",
]

[project.scripts]
readly-mcp = "readly_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/readly_mcp"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
